# microsoft-graph-dump

./: .gitignore  Cargo.toml  README.md
src/: main.rs
